fix: adjusting small things

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -22,11 +22,11 @@
     "end": "End",
     "new": "New",
     "loadmore": "Load More",
-    "label": "Tag/Label/Contact/Nym",
+    "label": "Contact/Nickname/Label/Tag",
     "add": "Add",
     "modify": "Modify",
     "delete": "Delete",
-    "empty": "No contacts yet.",
+    "empty": "No Contacts/Nicknames/Labels/Tags yet.",
     "nochanges": "No changes registered. ",
     "fillboth": "Please fill out both fields. ",
     "bothexists": "This label and this address already exists. ",
