--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -22,11 +22,11 @@
     "end": "Fin",
     "new": "Nuevo",
     "loadmore": "Cargar más",
-    "label": "Etiqueta/Contacto/Apodo",
+    "label": "Contacto/Apodo/Etiqueta",
     "add": "Añadir",
     "modify": "Modificar",
     "delete": "Borrar",
-    "empty": "No existen contactos todavía.",
+    "empty": "No existe ningún Contacto/Apodo/Etiqueta todavía.",
     "nochanges": "No se haan registrado cambios.",
     "fillboth": "Por favor rellena ambos campos. ",
     "bothexists": "Esta etiqueta y esta dirección ya existen. ",
