fix: edickson changes

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -22,7 +22,8 @@
     "end": "End",
     "new": "New",
     "loadmore": "Load More",
-    "label": "Contact/Nickname/Label/Tag",
+    "label": "Contact",
+    "label-placeholder": "Nickname/Label/Tag",
     "add": "Add",
     "modify": "Modify",
     "delete": "Delete",
